buildscript {
    dependencies {
        constraints {
            classpath ('org.apache.commons:commons-lang3:3.18.0') {
                because("previous versions have vulnerabilities")
            }
            classpath ('com.fasterxml.jackson.core:jackson-core:2.21.1') {
                because("previous versions have vulnerabilities")
            }
            classpath ('io.netty:netty-codec-http2:4.2.13.Final') {
                because("previous versions have vulnerabilities")
            }
            classpath ('io.netty:netty-codec-http:4.2.10.Final') {
                because("previous versions have vulnerabilities")
            }
        }
    }
}

plugins {
    id 'java'
    id 'checkstyle'
    id 'io.freefair.lombok' version '8.10'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.fabric8.java-generator' version "${fabric8_kubernetes_client_version}"
}

group = 'com.epam.aidial'
version = "0.0.0"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javaGen {
    source = file('src/main/resources/kubernetes/crd')
    target = file("${layout.buildDirectory.get().asFile}/generated/sources/fabric8JavaGenerator/java/main")
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    configureEach {
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
        resolutionStrategy {
            force 'com.google.code.gson:gson:2.8.9'
            force 'commons-beanutils:commons-beanutils:1.11.0'
        }
    }
}

checkstyle {
    toolVersion = "10.21.4"
    configDirectory = file("$rootProject.projectDir/checkstyle")

    configProperties['org.checkstyle.google.suppressionfilter.config'] =
            file("$rootDir/checkstyle/checkstyle-suppressions.xml")
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
    // overrides the Boot-BOM-managed OpenTelemetry 1.55.0 — unbounded memory allocation in W3C baggage propagation, patched in 1.62.0
    implementation platform('io.opentelemetry:opentelemetry-bom:1.62.0')

    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-restclient'
    implementation 'org.springframework.boot:spring-boot-starter-jackson'
    implementation 'tools.jackson.dataformat:jackson-dataformat-yaml'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'

    implementation 'com.azure:azure-identity:1.18.0'
    implementation 'com.azure:azure-identity-extensions:1.2.7'

    implementation 'net.javacrumbs.shedlock:shedlock-spring:7.7.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:7.7.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.h2database:h2:2.3.232'
    implementation 'org.postgresql:postgresql:42.7.11'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:13.2.1.jre11'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.flywaydb:flyway-sqlserver'
    implementation 'com.google.cloud.sql:postgres-socket-factory:1.28.0'

    implementation 'io.modelcontextprotocol.sdk:mcp:1.1.1'
    implementation 'com.google.cloud.tools:jib-core:0.27.3'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    implementation 'commons-io:commons-io:2.18.0'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0-M3'

    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation "io.fabric8:kubernetes-client:${fabric8_kubernetes_client_version}"
    implementation "io.fabric8:knative-client:${fabric8_kubernetes_client_version}"
    implementation "io.fabric8:generator-annotations:${fabric8_kubernetes_client_version}"
    implementation 'io.kubernetes:client-java:22.0.0'

    implementation('org.springframework.boot:spring-boot-starter-log4j2') {
        exclude group: 'org.apache.logging.log4j'
    }
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-jul:2.25.4'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
    // version aligned with the OpenTelemetry API 1.62.0 pinned via opentelemetry-bom above (instrumentation 2.28.x <-> SDK 1.62.x)
    implementation 'io.opentelemetry.instrumentation:opentelemetry-log4j-appender-2.17:2.28.1-alpha'

    implementation 'org.hibernate.orm:hibernate-envers'
    // Jackson 2 is intentionally kept: legacy Java Flyway migrations are pinned to it so they keep
    // executing the exact code they shipped with (db.migration.MigrationJsonMapper), and Hibernate's
    // JSON column mapping (@JdbcTypeCode(SqlTypes.JSON)) still uses Jackson 2 with
    // constructor-parameter-name detection, which spring-boot-starter-json used to provide before Jackson 3
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.21.2'
    runtimeOnly 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.21.2'
    implementation 'com.github.f4b6a3:uuid-creator:6.0.0'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"

    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.2'
    // runtime-only via spring-boot-starter-opentelemetry; needed at compile time by OpenTelemetryExportConfigurationTest
    testImplementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    testImplementation 'io.micrometer:micrometer-registry-otlp'
    testImplementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    testRuntimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    testRuntimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-cache-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:testcontainers-jdbc'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testImplementation 'org.testcontainers:testcontainers-mssqlserver'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    constraints {
        implementation ('org.apache.tomcat.embed:tomcat-embed-core:11.0.22') {
            because("previous versions have vulnerabilities")
        }
        implementation ('com.nimbusds:nimbus-jose-jwt:10.3.1') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.projectreactor.netty:reactor-netty-http:1.2.8') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-codec-http2:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation("io.grpc:grpc-netty-shaded:1.75.0") {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-codec-dns:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-codec-http3:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-handler-proxy:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-transport-native-epoll:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('com.fasterxml.jackson.core:jackson-core:2.21.1') {
            because("transitive Jackson 2 from fabric8/MCP/jib — previous versions have vulnerabilities")
        }
        implementation("org.bouncycastle:bcprov-jdk18on:1.84") {
            because("previous versions have vulnerabilities")
        }
        checkstyle ('org.codehaus.plexus:plexus-utils:4.0.3') {
            because("previous versions have vulnerabilities")
        }
        checkstyle ('org.apache.commons:commons-lang3:3.18.0') {
            because("previous versions have vulnerabilities")
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('testFast', Test) {
    description = 'Runs all tests except Postgres and SQL Server functional tests (testcontainers).'
    group = 'verification'
    useJUnitPlatform()
    filter {
        excludeTestsMatching 'com.epam.aidial.deployment.manager.functional.PostgresFunctionalTests'
        excludeTestsMatching 'com.epam.aidial.deployment.manager.functional.SqlServerFunctionalTests'
    }
}

tasks.register('generateDbSchema', JavaExec) {
    dependsOn classes
    mainClass = 'db.schema.GenerateDbSchema'
    classpath = sourceSets.main.runtimeClasspath
    args = ["${projectDir}/docs/db-schema.md"]
}

tasks.withType(JavaCompile).configureEach {
    dependsOn(crd2java)
    options.compilerArgs += "-Werror"
}

sourceSets {
    main {
        java {
            srcDir(file("${buildDir}/generated/sources/fabric8JavaGenerator/java/main"))
        }
    }
}
